Dirto-copybot-main/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wenbot-prod
  labels:
    app: wenbot
    environment: production
