Dirto-copybot-main/k8s/telegram-bot.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: telegram-bot
  namespace: wenbot-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: telegram-bot
  template:
    metadata:
      labels:
        app: telegram-bot
    spec:
      containers:
        - name: telegram-bot
          image: wenbot/bot:latest
          imagePullPolicy: Never
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "200m"
